Fixing the spacing between elements when in edit mode

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,12 +83,12 @@
 
   .tudu-task-container {
     float: left;
-    padding: 20px;
   }
 
   .tudu-list li.tudu-list-task {
     border-bottom: 1px solid #eee;
     display: block;
+    padding: 20px;
   }
 
   .tudu-list li.tudu-list-task:hover{
@@ -98,7 +98,6 @@
   .tudu-task-options {
     overflow: hidden;
     float: right;
-    padding: 20px;
   }
 
   .tudu-task-options li {
@@ -166,7 +165,9 @@
     border: none;
     outline: none;
     width: 100%;
+    padding-bottom: 10px;
     border-bottom: 1px dashed #ccc;
+    margin-bottom: 10px;
   }
 
 
